--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,6 +16,10 @@
         <button *ngIf="!isLoggedIn" type="button" routerLink="/login"
           class="text-white   bg-violet-500 hover:bg-violet-700 focus:ring-4 focus:outline-none  font-medium rounded-lg text-sm px-4 py-2 ">Login</button>
 
+        <span *ngIf="isLoggedIn"
+          class="text-white   bg-violet-500 focus:ring-4 focus:outline-none  font-medium rounded-lg text-sm px-4 py-2 mr-5 ">Welcome
+          {{ username }} !</span>
+
         <button *ngIf="isLoggedIn" type="button" (click)="logout()"
           class="text-white   bg-violet-500 hover:bg-violet-700 focus:ring-4 focus:outline-none  font-medium rounded-lg text-sm px-4 py-2 ">Logout</button>
 
