added start page

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,9 +4,10 @@
 
     <nav>
       <ul class="md:flex items-center justify-between text-base text-blue-600 pt-4 md:pt-0">
-        <li><a
-            class=" text-white font-bold cursor-pointer no-underline inline-block  hover:text-black  text-lg py-2 px-4 lg:-ml-2"
-            routerLink="/">LudusDB</a></li>
+        <li> <a class="mr-2 mt-2 flex items-center text-white" routerLink="/">
+            <img class="mr-2 rounded-xl" src="../../assets/images/logo/ludusdb.png" style="height: 40px" alt=""
+              loading="lazy" /> LudusDB</a>
+        </li>
       </ul>
     </nav>
 
