--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,6 +16,7 @@
   <button type="button" (click)="prevPage()"
     class="text-white relative right-2.5 bottom-2.5 bg-violet-500 hover:bg-violet-700 focus:ring-4 focus:outline-none  font-medium rounded-lg text-sm px-4 py-2 ">prev
     page</button>
+  <span class="font-bold text-white underline mx-2">{{currentPage}}</span>
   <button type="button" (click)="nextPage()"
     class="text-white relative right-2.5 bottom-2.5 bg-violet-500 hover:bg-violet-700 focus:ring-4 focus:outline-none  font-medium rounded-lg text-sm px-4 py-2 ml-5">Next
     page</button>
